examples/test/testpolicy8427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8427
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key14: value20
      key44: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value5
      podSelector:
        matchLabels:
          key24: value19
          key32: value41
          key22: value21
